--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +11,7 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Quicksand";
   line-height: 1;
   font-weight: 400;
   color: #555;
